# froglike-game

./: .clang-format  CMakeLists.txt  README.md  force.cpp  force.h  main.cpp
assets/tilemap/: example.tmx  froglike.tiled-session  swamp.tsx  textures.tsx
object/: enemy.cpp  enemy.h  hero.cpp  hero.h  object.cpp  object.h
src/: main.cpp
src/animation/: animation.cpp  animation.h  sprite.h
src/camera/: camera.cpp  camera.h
src/environment/: background.cpp  background.h  layerType.h  tilemap.cpp  tilemap.h  time.cpp  time.h
src/force/: force.cpp  force.h
src/object/: collisions.cpp  collisions.h  drawable.cpp  drawable.h  enemy.cpp  enemy.h  hero.cpp  hero.h  movable.cpp  movable.h  object.cpp  object.h  side.h  status.h  type.h
